Fix schedule detail on mobile

--- a/app/src/components/schedules/ScheduleDetail.module.scss
+++ b/app/src/components/schedules/ScheduleDetail.module.scss
@@ -18,8 +18,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: min(calc(100% - 32px), pxToRem(880));
-  max-height: pxToRem(440);
+  max-width: min(calc(100vw - 32px), pxToRem(880));
+  max-height: min(calc(100vh - 32px), pxToRem(440));
   width: 100%;
   height: 100%;
   background-color: white;
@@ -31,7 +31,26 @@
 
   h1 {
     @include title;
+
+    text-align: center;
+    width: 75%;
+    margin-inline: pxToRem(20);
     margin-bottom: pxToRem(2);
+
+    @media screen and (max-width: $breakpoint-sm) {
+      @include text-large;
+
+      font-weight: bold;
+    }
+
+    @media screen and (max-width: $breakpoint-xs) {
+      @include title-small;
+    }
+  }
+
+  @media screen and (max-width: $breakpoint-sm) {
+    max-width: min(calc(100vw - 16px), pxToRem(880));
+    max-height: calc(100vh - 16px);
   }
 }
 
@@ -53,14 +72,26 @@
     padding-left: pxToRem(16);
     margin: pxToRem(8);
   }
+
+  @media screen and (max-width: $breakpoint-sm) {
+    overflow-y: auto;
+    flex-direction: column;
+    gap: pxToRem(16);
+  }
 }
 
 .imgContainer {
-  width: pxToRem(360);
-  flex: 0 0 pxToRem(360);
+  max-width: pxToRem(360);
+  flex: 1 1 0;
   display: flex;
   flex-direction: column;
   gap: pxToRem(24);
+
+  @media screen and (max-width: $breakpoint-sm) {
+    max-width: 100%;
+    align-items: center;
+    gap: pxToRem(16);
+  }
 }
 
 .date {
@@ -92,14 +123,17 @@
 }
 
 .eventImg {
-  width: pxToRem(360);
-  height: pxToRem(240);
+  height: auto;
   object-fit: cover;
   border-radius: pxToRem(4);
   box-shadow: 0 0 pxToRem(4) pxToRem(2) rgba(0, 0, 0, 0.15);
   background: linear-gradient(110deg, $shade100 8%, $shade50 18%, $shade100 33%);
   background-size: 200% 100%;
   animation: 1.5s shine linear infinite;
+
+  @media screen and (max-width: $breakpoint-sm) {
+    width: pxToRem(240);
+  }
 }
 
 .links {
@@ -116,7 +150,7 @@
   flex-direction: row;
   gap: pxToRem(4);
   align-items: center;
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
 
   svg {
     flex: 0 0 pxToRem(12);
@@ -124,6 +158,9 @@
 }
 
 .description {
+  overflow-y: auto;
+  flex: 1 1 0;
+
   p {
     margin-bottom: pxToRem(8);
   }
@@ -131,12 +168,19 @@
   :last-child {
     margin-bottom: 0;
   }
+
+  @media screen and (max-width: $breakpoint-sm) {
+    overflow-y: visible;
+  }
 }
 
 .category {
-  @include title-small;
-
   text-transform: capitalize;
+  font-weight: bold;
+
+  @media screen and (min-width: $breakpoint-sm) {
+    @include title-small;
+  }
 }
 
 .close {
@@ -144,28 +188,6 @@
   top: pxToRem(16);
   right: pxToRem(16);
   cursor: pointer;
-}
-
-.btnsContainer {
-  height: pxToRem(40);
-  display: flex;
-  flex-direction: row;
-  gap: pxToRem(12);
-  margin-top: auto;
-  padding-top: pxToRem(12);
-}
-
-.participateBtn {
-  width: 100%;
-  color: black;
-  font-weight: bold;
-  background-color: $shade200;
-  border-radius: pxToRem(4);
-
-  &:active,
-  &:focus {
-    outline: none;
-  }
 }
 
 @keyframes shine {
