--- a/app/src/styles/variables.scss
+++ b/app/src/styles/variables.scss
@@ -16,6 +16,7 @@ $shade200: #c9c9c9;
 $shade100: #ececec;
 $shade50: #f5f5f5;
 
-$breakpoint-sm: 360px;
+$breakpoint-xs: 360px;
+$breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 1024px;
